# $Id: Makefile.am,v 1.4 2003/06/15 21:39:55 stevecheng Exp $
#
# This Makefile installs the Man page XSLT stylesheets.
#

XSL_FILES = admon.xsl beginpage.xsl block.xsl caption.xsl \
	docbook.xsl formal.xsl glossary.xsl index.xsl \
	info.xsl inline.xsl keywords.xsl lists.xsl \
	param.xsl pi.xsl manpage.xsl \
	refentry.xsl sectioning.xsl \
	sections.xsl synop.xsl table.xsl toc.xsl verbatim.xsl \
	xref.xsl

xsltdir = $(pkgdatadir)/xslt
xsltmandir = $(xsltdir)/man
xsltman_DATA = $(XSL_FILES) 

EXTRA_DIST = $(XSL_FILES)
