# $Id: Makefile.am,v 1.2 2003/06/01 20:46:17 stevecheng Exp $
#

L10N_FILES = af.xml bg.xml ca.xml cs.xml da.xml de.xml el.xml \
             en.xml es.xml et.xml eu.xml fi.xml fr.xml he.xml \
	     hu.xml id.xml it.xml ja.xml ko.xml lt.xml \
	     nl.xml nn.xml no.xml pl.xml pt.xml pt-br.xml ro.xml \
	     ru.xml sk.xml sl.xml sr.xml sv.xml th.xml tr.xml \
	     uk.xml vi.xml xh.xml zh-cn.xml zh-tw.xml \
             l10n-set.xml

xsltdir = $(pkgdatadir)/xslt
xsltcommonl10ndir = $(xsltdir)/common/text
xsltcommonl10n_DATA = $(L10N_FILES)

EXTRA_DIST = $(L10N_FILES)
